--- a/roles/infra/files/homepage/index.html
+++ b/roles/infra/files/homepage/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Forge homepage ({{ FORGE_MODE }})</title>
+    <title>Forge homepage ({{ IDENTITY }})</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
