--- a/ansible/roles/infra/files/homepage/index.html
+++ b/ansible/roles/infra/files/homepage/index.html
@@ -13,9 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    			  crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   </head>
   <body>
     <nav>
@@ -33,7 +31,7 @@
   <footer>
      <div class="footer-copyright grey lighten-4 center">
        <div class="container">
-       Forge © 2019-2022 Nicolas Gargaud (jacen92) </br>
+       Forge © 2019-2023 Nicolas Gargaud (jacen92) </br>
        <a class="center" target="_blank" href="https://maison-gargaud.info/forge">Maison Gargaud</a>
        </div>
      </div>
